--- a/todo_app/app/views/todos/new.html.erb
+++ b/todo_app/app/views/todos/new.html.erb
@@ -1,7 +1,7 @@
 <h2>Crear un nuevo ToDo</h2>
 <div class="row">
   <div class="col-md-3">
-    <%= form_with(model: @sale,  local: true) do |f| %>
+    <%= form_with(model: @todo,  local: true) do |f| %>
       <div class="form-group">
           <%= f.label :description, "Description" %>
           <%= f.text_area :description , class:'form-control'%>
